# IA_mundo_do_wumpus

./:  _config.yml   _config.yml.  404.html  LICENSE  README.md  blog.html  index.html  main.py  mainv1.py  markdown-page.html  pyproject.toml  sitemap.xml  teste.py
.github/workflows/: deploy.yml
analide_dados/: analide_dados.ipynb  perguntas.txt
assets/css/: styles.1dba4d76.css  styles.4ccbae9e.css  styles.ba75f8a5.css  styles.bcc3a6df.css
assets/js/: 062ebf8c.84707507.js  062ebf8c.cb5b112f.js  062ebf8c.f41bb79a.js  0e384e19.66327795.js  0e384e19.6d10a9ad.js  0e384e19.e745b718.js  0e384e19.f64a7a4d.js  0e384e19.f6a8a773.js  0e66ac20.6ed489cf.js  0e66ac20.ea656984.js  130a244e.1c707bc2.js  130a244e.2dd8b4dc.js  130a244e.90f7d33d.js  130a244e.a47bfe7d.js  130a244e.a5710db8.js  18c41134.d8c86477.js  1e4232ab.56321ce2.js  24c94a27.8da81f1c.js  28f6db54.48ea2dcb.js  28f6db54.dd36a8e8.js  (+168 more)
blog/: Bem-vindos.html  archive.html  atom.xml  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  test-blog-post.html  welcome.html
docs/: docusaurus.config.js  intro.html  package-lock.json  package.json
en/: 404.html  blog.html  index.html  markdown-page.html  sitemap.xml
ia_mundo_do_wumpus/: __init__.py  agente.py  ambiente.py
ia_wumpus/: __init__.py  agente_reativo-v1.py  agente_reativo.py  agente_reativo_v1.py  agente_reativo_v2.py  ambiente.py  dinamica_agente_ambiente.py
simulacao/: sim_1_dimensao_15_v50  sim_1_dimensao_25_v50  sim_1_dimensao_35_v50  sim_1_dimensao_3_v50  sim_1_dimensao_5_v50
utils/: 2023-05-18-Note-18-03.xopp
(+164 files in other folders)
